# simple-proxy

./: Procfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
simple_proxy/: api.py
test_data/: google.html  google_with_replaced_url.html
tests/: conftest.py  test_api.py
