[tool.poetry]
name = "simple-proxy"
version = "0.1.0"
description = ""
authors = ["potykion <potykion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.54.1"
httpx = "^0.12.1"
uvicorn = "^0.11.5"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
